# strix-halo-rocm-toolkit

./: .dockerignore  .gitignore  README.md  install.sh  pyproject.toml
docs/: doctor-repair.md  gpu-qualification.md  host-operations.md  image-build.md  install.md  project-workflow.md  protected-pip.md  release-chain.md
docs/releases/: v0.2.3.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.3.md
images/common/: container-check  protected-pip  torch-manifest.py
images/rocm-python/: Dockerfile
images/rocm-pytorch/: Dockerfile
profiles/host/: tested-kernels.json
profiles/qualification/: comfy-video.example.toml  stable.toml
profiles/releases/: registries.json  stable.json
profiles/rocm/: rocm.gpg.sha256
profiles/torch/: custom.example.env  stable.env  stable.sources.env
src/amd_ai/: cli.py  report.py  runner.py
templates/project/: .dockerignore  Dockerfile  amd-ai-project.toml  project-entrypoint  requirements.in
tests/: test_version.py
tests/cli/: test_doctor_commands.py  test_host_commands.py  test_image_commands.py  test_installer_commands.py  test_installer_resume.py  test_overlay_commands.py  test_project_commands.py  test_release_commands.py
tests/container/: test_image_contract.py  test_project_dockerfile.py  test_project_layers.py  test_readonly_overlay.py  test_repair_flow.py  test_rocm_python_dockerfile.py  test_rocm_pytorch_dockerfile.py
tests/gpu/: hip_vector_add.cpp  repeated_start.py  run_hip_smoke.py  stress.py  torch_extension_smoke.py  torch_smoke.py  triton_smoke.py
tools/: generate-sbom.py  lock-rocm-packages  lock-wheels
(+170 files in other folders)
